kubernetes/event/findlf/findlf.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: findlf
  namespace: event
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: findlf
  template:
    metadata:
      labels:
        task: event
        k8s-app: findlf
    spec:
      containers:
      - name: findlf
        ports:
        - containerPort: 8072
        image: golang
        command:
          - /bin/sh
          - -c
          - "cd /go/find-lf/server ; ./server -server find "
        volumeMounts:
        - name: build-dir
          mountPath: /go
        - name: findlf-install
          mountPath: /start
      volumes:
      - name: findlf-install
        configMap:
          name: findlf-install
          defaultMode: 0755
      - name: build-dir
        emptyDir: {} 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: findlf
  name: findlf
  namespace: event
spec:
  ports:
  - port: 80
    targetPort: 8072
  selector:
    k8s-app: findlf
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: findlf
  namespace: event
spec:
  rules:
  - host: findlf.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: findlf
          servicePort: 80
